# DGtal

./: .clang-format  .codespell.ignore-words.txt  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHORS  CMakeLists-old.txt  CMakeLists.txt  CMakeLists.txt~  CONTRIBUTING.md  CONTRIBUTORS  CTestConfig.cmake  ChangeLog  ChangeLog.md  DGtalConfig.cmake.in  Dockerfile  FindCOIN3D.cmake  FindMagick.cmake  FindSOQT.cmake  README  README.md  TargetDoxygenDoc.cmake  appveyor.yml  conanfile.txt  doxy.config.Board.in  doxy.config.in  essayonsStash  pyproject.toml
dependencies/: CMakeLists.txt  azure-pipelines.yml  clean_build_artifacts.cmake  deploy_dependencies_unix.sh
examples/: CMakeLists.txt  ConfigExamples.h  ConfigExamples.h.in  ExampleFunctions.cmake
examples/3dViewer/: CMakeLists.txt  demo-kernel-2.cpp  dgtalQGLviewer-1-points.cpp  dgtalQGLviewer-2-sets.cpp  dgtalQGLviewer-3-objects.cpp  dgtalQGLviewer-4-modes.cpp  dgtalQGLviewer-5-custom.cpp  dgtalQGLviewer-6-clipping.cpp
examples/CairoViewers/: CMakeLists.txt  demo-kernel-2.cpp  dgtalCairo-0-demo-kernel-2.cpp  dgtalCairo-1-points.cpp  dgtalCairo-2-sets.cpp  dgtalCairo-2bis-sets.cpp  dgtalCairo-3-objects.cpp  dgtalCairo-4-modes.cpp  dgtalCairo-5-custom.cpp  dgtalCairo-6.cpp
examples/arithmetic/: CMakeLists.txt  approximation.cpp  convergents-biginteger.cpp  convergents.cpp  extended-euclid.cpp  fraction.cpp  lower-integer-convex-hull.cpp  pattern.cpp
examples/base/: CMakeLists.txt  exampleFunctorHolder.cpp  exampleIteratorCompletion.cpp
examples/dec/: CMakeLists.txt  DECExamplesCommon.h  common.h  exampleDECSurface.cpp  exampleDiscreteExteriorCalculusChladni.cpp  exampleDiscreteExteriorCalculusSolve.cpp  exampleDiscreteExteriorCalculusUsage.cpp  exampleHarmonicParametrization.cpp  exampleHeatLaplace.cpp  examplePropagation.cpp  exampleSurfaceATNormals.cpp  exampleUsage.cpp  exampleVectorHeatMethod.cpp  example_dec.cpp  propagation.gp
examples/doc-examples/: CMakeLists.txt  catch.hpp  ctopo-1-3d.cpp  ctopo-1.cpp  ctopo-1s-3d.cpp  ctopo-2-3d.cpp  ctopo-2.cpp  demo-kernel-1.cpp  exampleCatch.cpp  kernelDomain.cpp  khalimskySpaceScanner.cpp  labelledMapBestParameters.cpp  range.cpp
examples/geometry/: ArithmeticalDSS.cpp  CMakeLists.txt  DSS.cpp  convex-and-concave-parts.cpp  distancetransform2D.cpp  distancetransform3D.cpp  exampleGeometricalDCA.cpp  exampleGeometricalDSS.cpp  exampleGridCurve2d.cpp  examplePreimage.cpp  freemanChainDisplay.cpp  freemanChainFromImage.cpp  greedy-dss-decomposition.cpp  gridcurve2.cpp
examples/graph/: CMakeLists.txt  graphTraversal.cpp  volDistanceTraversal.cpp
examples/images/: CMakeLists.txt  example2DBijectiveRotations.cpp  exampleAffinetransformation2d.cpp  exampleArrayImageAdapter.cpp  exampleConstImageAdapter.cpp  exampleConstImageFunctorHolder.cpp  exampleFunctorConstImage.cpp  exampleImageFactoryFromHDF5.cpp  exampleRigidtransformation2d.cpp  exampleRigidtransformation3d.cpp  exampleTiledImage.cpp  exampleTiledImageFromImage.cpp  extract2DImagesFrom3D.cpp  extract2DImagesFrom3DandVisu.cpp  extract2DSlicesImagesFrom3D.cpp  imageBasicSubsampling.cpp  raw2HDF5.cpp  rigidtransformation2d.cpp  rigidtransformation3d.cpp
examples/io/: CMakeLists.txt  dgtalboard-1-points.cpp  dgtalboard-2-sets.cpp  dgtalboard-3-custom-classes.cpp  dgtalboard-3-custom-points.cpp  dgtalboard-4-colormaps.cpp  dgtalboard-5-greedy-dss.cpp  dgtalboard-5-maxdss.cpp  digitalSetFromPointList.cpp  digitalSetFromVol.cpp  display3DToOFF.cpp  meshFromOFF.cpp  viewDualSurface.cpp
examples/kernel/: CMakeLists.txt  exampleHyperRectDomainParallelScan.cpp  examplePointFunctorHolder.cpp
examples/math/: CMakeLists.txt  polynomial-derivative.cpp  polynomial-read.cpp  polynomial2-derivative.cpp
examples/polyscope-examples/: CMakeLists.txt  SymmetricConvexExpander.h  dgtalCC-poisson.cpp  dgtalCalculus-bunny.cpp  dgtalCalculus-geodesic.cpp  dgtalCalculus-halfsphere.cpp  dgtalCalculus-poisson.cpp  dgtalCalculus-single.cpp  dgtalCalculus.cpp  dgtalFEM-poisson.cpp  example-bimbaPoly.cpp  exampleBimbaPoly.cpp  exampleBunnyHead.cpp  exampleHarmonicParametrization.cpp  exampleVectorHeatMethod.cpp  tangency-explorer.cpp  tangency-reconstruction.cpp  windingNumbersShape.cpp
examples/samples/: Al.100.vol  ascii_ball.pgm3d  bimbaPoly.mtl  bunny-128.vol  bunny-32.vol  bunny-64.vol  bunnyhead2.mtl  cat10.vol  cat10b.vol  circleR10.pgm  circleR10modif.pgm  contourS.fc  contourS.sdp  pointList3d.pl  tref.off
examples/shapes/: CMakeLists.txt  DelaunayTriangulationAndVoronoi.cpp  Mesh3DConstructionAndVisualisation.cpp  exampleDigitalShapesDecorator.cpp  exampleEuclideanShapesDecorator.cpp  exampleMeshVoxelizer.cpp  exampleParametricShapes.cpp  exampleSurfaceMesh.cpp  exampleTriangulatedSurface.cpp  mesh3DConstructionAndVisualisation.cpp  sphereCotangentLaplaceOperator.cpp  viewMarchingCubes.cpp  viewPolygonalMarchingCubes.cpp
examples/topology/: 3dBorderExtraction.cpp  3dBorderExtractionImg.cpp  3dBorderExtractionVol.cpp  3dKSSurfaceExtraction.cpp  CMakeLists.txt  area-estimation-with-digital-surface.cpp  area-estimation-with-indexed-digital-surface.cpp  ctopo-1-3d.cpp  ctopo-1.cpp  ctopo-1s-3d.cpp  ctopo-2-3d.cpp  (+22 more)
exercises/: CMakeLists.txt  FindDGtal.cmake  FindMagick.cmake  README
src/: CMakeLists.txt
tests/: CMakeLists.txt  ConfigTest.h  ConfigTest.h.in  DGtalCatch.cpp  DGtalCatch.h  TestFunctions.cmake  catch.hpp  testArithDSS.cpp  testHyperRectDomain-snippet.cpp  testHyperRectDomain.cpp  test_BoxDomain.cpp  test_DigitalSet.cpp  test_Domain.cpp  test_Domain1DIterator.cpp  test_DomainSpanIterator.cpp  test_HyperRectDomain-snippet.cpp  test_HyperRectDomain.cpp  test_HyperRectImage.cpp  test_Image.cpp  test_ImageSpanIterators.cpp  test_LineDomain.cpp  test_PointVector.cpp  test_Space.cpp  test_SpaceND.cpp  test_clock.cpp  test_measure.cpp  test_trace.cpp
tools/: CMakeLists.txt  dgtal-config.cpp  dgtal-config.cpp.in
wrap/: CMakeLists.txt  README.md  __init__.py  azure-pipelines.yml  dgtal_init_py.cpp  dgtal_nanobind_common.h  dgtal_pybind11_common.h  dgtal_python_types.h
(+5819 files in other folders)
